--- a/F1Tippspiel.Web/Views/Account/Register.cshtml
+++ b/F1Tippspiel.Web/Views/Account/Register.cshtml
@@ -3,70 +3,106 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Register</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/bootstrap")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <style type="text/css">
+        body{background-image: url(../../Content/static/img/splash-bg.jpg)}
+        .user-details {position: relative; padding: 0;}
+        .user-details .user-image {position: relative;  z-index: 1; width: 100%; text-align: center;}
+         .user-image img { clear: both; margin: auto; position: relative;}
+
+        .user-details .user-info-block {width: 100%; position: absolute; top: 55px; background: rgb(255, 255, 255); z-index: 0; padding-top: 35px;}
+         .user-info-block .user-heading {width: 100%; text-align: center; margin: 10px 0 0;}
+         .user-info-block .navigation {float: left; width: 100%; margin: 0; padding: 0; list-style: none; border-bottom: 1px solid #428BCA; border-top: 1px solid #428BCA;}
+          .navigation li {float: left; margin: 0; padding: 0;}
+           .navigation li a {padding: 20px 30px; float: left;}
+           .navigation li.active a {background: #428BCA; color: #fff;}
+         .user-info-block .user-body {float: left; padding: 5%; width: 100%;}
+          .user-body .tab-content > div {float: left; width: 100%;}
+          .user-body .tab-content h4 {width: 100%; margin: 10px 0; color: #333;}
+    </style>
+
 </head>
 <body>
-    @using (Html.BeginForm()) 
-    {
-        <div class="form-horizontal">
-            <h4>UserProfile</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">&nbsp;</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 user-details">
+                <div class="user-image">
+                    <img src="@Html.Raw(Model.Picture)" alt="@Html.Raw(Model.Name)" width="100" title="@Html.Raw(Model.Name)" class="img-circle">
                 </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.DisplayName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.DisplayName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DisplayName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Picture, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Picture, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group"><label class="control-label col-md-2" for="Email">Email</label>
-                <div class="col-md-10">
-                    <input class="form-control text-box single-line" id="Email" name="Email" type="text" value="bigbasti@gmail.com">
-                    <span class="field-validation-valid text-danger" data-valmsg-for="Email" data-valmsg-replace="true"></span>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.UniqueId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UniqueId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UniqueId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="user-info-block">
+                    <div class="user-heading">
+                        <h3>@Html.Raw(Model.Name)</h3>
+                        <span class="help-block">@Html.Raw(Model.DisplayName)</span>
+                    </div>
+
+                    <div class="user-body">
+                        <strong>Provider: </strong>@Model.Provider.ToString() - <strong>E-Mail:</strong> @Model.Email <p/>
+
+                        @using(Html.BeginForm("register", "account")){
+                        <text>
+                            @if (string.IsNullOrEmpty(Model.Email) || string.IsNullOrEmpty(Model.DisplayName) || string.IsNullOrEmpty(Model.Name))
+                            {
+                                <div class="alert alert-warning" role="alert">Bitte verfollstädigen Sie folgende Informationen:</div>
+                            }
+                            @if (string.IsNullOrEmpty(Model.Email))
+                            {
+                                @Html.LabelFor(m => m.Email)  @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "meine@email.de" }) 
+                                <p>@Html.ValidationMessageFor(m => m.Email)</p>
+                            }
+                            else
+                            {
+                                @Html.HiddenFor(m => m.Email)
+                            }
+                            @if (string.IsNullOrEmpty(Model.DisplayName))
+                            {
+                                @Html.LabelFor(m => m.DisplayName)  @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control", placeholder = "Axel Schweis" })
+                                <p>@Html.ValidationMessageFor(m => m.DisplayName)</p>
+                            }
+                            else
+                            {
+                                @Html.HiddenFor(m => m.DisplayName)
+                            }
+                            @if (string.IsNullOrEmpty(Model.Name))
+                            {
+                                @Html.LabelFor(m => m.Name)  @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Axel Schweis" })
+                                <p>@Html.ValidationMessageFor(m => m.Name)</p>
+                            }
+                            else
+                            {
+                                @Html.HiddenFor(m => m.Name)
+                            }
+                            @Html.HiddenFor(m => m.Provider)
+                            @Html.HiddenFor(m => m.UniqueId)
+                            @Html.HiddenFor(m => m.Picture)
+
+                            <strong>Sind diese informationen korrekt?</strong><p>&nbsp;</p>
+                            <div style="margin-left:auto; margin-right:auto; width:100px;">
+                                <a class="btn btn-danger" href="#" role="button">Nein</a>
+                                <input class="btn btn-success" type="submit" value="Ja">
+                            </div>
+                        </text>
+                        }
+                    </div>
                 </div>
             </div>
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
     </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
