--- a/F1Tippspiel.Web/Views/Account/Welcome.cshtml
+++ b/F1Tippspiel.Web/Views/Account/Welcome.cshtml
@@ -5,18 +5,26 @@
     Layout = "~/Views/Shared/_BootstrapLayout.cshtml";
 }
 
+@section bodyClass
+ {
+    bg-welcome
+}
 
 <div class="row">
-    <div class="col-md-2">
-        <div style="padding-top: 30px; padding-left: 30px;">
-            <img src="@Model.Picture" />
+    <div class="col-md-8 hover-content">
+        <div class="row">
+            <div class="col-md-4">
+                <div style="padding-top: 30px; padding-left: 30px;">
+                    <img src="@Model.Picture" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h1>Willkommen an Bord</h1>
+                <p><strong>Hallo, @Model.DisplayName!</strong><br />Du kannst dich nun mit deinen Benutzerdaten im Tippspiel einloggen.</p>
+                <p>Wir haben dir eine Willkommens-E-Mail gesendet, bitte prüfe ob diese erfolgreich angekommen ist und prüfe ggf. deinen Spam-Ordner!</p>
+                <p>Viel Spaß, und viel Glück!</p>
+                @Html.ActionLink("Zur Startseite", "index", "home", null, new { @class = "btn btn-default" })
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <h1>Willkommen an Bord</h1>
-        <p><strong>Hallo, @Model.DisplayName!</strong><br/>Du kannst dich nun mit deinen Benutzerdaten im Tippspiel einloggen.</p>
-        <p>Wir haben dir eine Willkommens-E-Mail gesendet, bitte prüfe ob diese erfolgreich angekommen ist und prüfe ggf. deinen Spam-Ordner!</p>
-        <p>Viel Spaß, und viel Glück!</p>
-        @Html.ActionLink("Zur Startseite", "index", "home", null, new { @class = "btn btn-default" })
     </div>
 </div>
