--- a/F1Tippspiel.Web/Views/Shared/_BootstrapLayout.cshtml
+++ b/F1Tippspiel.Web/Views/Shared/_BootstrapLayout.cshtml
@@ -12,7 +12,7 @@
     @Styles.Render("~/Content/font-awesome")
 
 </head>
-<body>
+<body class="@RenderSection("bodyClass", required:false)">
     <div class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
@@ -34,12 +34,10 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
+        <footer style="margin-top: 20px;">
             <p>&copy; @DateTime.Now.Year - bigbasti.com</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
