--- a/F1Tippspiel.Web/Content/site.css
+++ b/F1Tippspiel.Web/Content/site.css
@@ -1,4 +1,14 @@
-﻿.field-validation-error{
+﻿body { padding-top: 70px; }
+
+#loginform label {
+    margin-bottom: 0px !important;
+}
+
+.spacer-bottom{
+    margin-bottom: 5px;
+}
+
+.field-validation-error{
     color: darkred;
 }
 .input-validation-error{
