--- a/F1Tippspiel.Web/Views/Home/Index.cshtml
+++ b/F1Tippspiel.Web/Views/Home/Index.cshtml
@@ -28,17 +28,19 @@
         <div class="row">
             <div class="col-md-12">
                 <h2>Login</h2>
-                @using (Html.BeginForm("login", "account"))
+                @using (Html.BeginForm("login", "account", FormMethod.Post, new { @id = "loginform" }))
                 {
-                    <h4>@Html.LabelFor(m => m.Username)</h4>
+                    @Html.LabelFor(m => m.Username)<br/>
                     @Html.ValidationMessageFor(m => m.Username)
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-                    <h4>@Html.LabelFor(m => m.Password)</h4>
+                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control spacer-bottom" })
+                    @Html.LabelFor(m => m.Password)<br/>
                     @Html.ValidationMessageFor(m => m.Password)
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                    @Html.CheckBoxFor(m => m.Remember) @Html.LabelFor(m => m.Remember)<br />
+                    <div class="checkbox">
+                        @Html.CheckBoxFor(m => m.Remember) @Html.LabelFor(m => m.Remember)
+                    </div>
                     <button type="submit" class="btn btn-info"><i class="fa fa-sign-in"></i> Login</button>
-                    <a href="@Url.Action("restore", "account")" class="btn btn-default"><i class="fa fa-key"></i> Passwort vergessen?</a>
+                    <a href="@Url.Action("forgotpassword", "account")" class="btn btn-default"><i class="fa fa-key"></i> Passwort vergessen?</a>
                 }
             </div>
         </div>
