--- a/F1Tippspiel.Web/Views/Home/_start.cshtml
+++ b/F1Tippspiel.Web/Views/Home/_start.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">F1 Tippspiel</a>
+            <a class="navbar-brand" href="#/">F1 Tippspiel</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav"></ul>
@@ -19,7 +19,7 @@
 
 <div class="row message-display">
     <div class="col-md-4">
-        {{}}
+        {{2+2}} {{siteTitle}}
     </div>
 </div>
 
