Angular Authentication and Login-View added - Angular: auth service added - Angular: authInterceptor service added - Web: Login-View and welcomepage added

--- a/F1Tippspiel.Web/Views/Home/Index.cshtml
+++ b/F1Tippspiel.Web/Views/Home/Index.cshtml
@@ -1,7 +1,45 @@
 ﻿@{
     Layout = "~/Views/Shared/_GameBootstrapLayout.cshtml";
 }
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#/">F1 Tippspiel</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#/">Willkommen</a></li>
+                <li><a href="#/rules">Regeln</a></li>
+                <li><a data-ng-hide="!authentication.isAuthenticated" href="#/dates">Termine</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li data-ng-hide="!authentication.isAuthenticated" class="dropdown">
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{authentication.userName}} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#/settings">Einstellungen</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#/admin">Administration</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#/logout">Ausloggen</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
 <div class="container">
     <div ng-view="">
     </div>
 </div>
+
+<footer>
+    <p>&copy; bigbasti.com @DateTime.Now.Year</p>
+</footer>
