--- a/F1Tippspiel.Web/Views/Shared/_GameBootstrapLayout.cshtml
+++ b/F1Tippspiel.Web/Views/Shared/_GameBootstrapLayout.cshtml
@@ -1,24 +1,25 @@
 ﻿<!DOCTYPE html>
 <html ng-app="tippspiel">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{siteTitle}}</title>
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/bootstrap")
-    @Scripts.Render("~/bundles/modernizr")
-    @Styles.Render("~/Content/font-awesome")
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title ng-bind="siteTitle">F1 Tippspiel</title>
+	@Styles.Render("~/Content/css")
+	@Styles.Render("~/Content/bootstrap")
+	@Scripts.Render("~/bundles/modernizr")
+	@Styles.Render("~/Content/font-awesome")
+	@Styles.Render("~/Content/loading-bar")
 </head>
-<body class="@RenderSection("bodyClass", required:false)">
+<body>
 
-    @RenderBody()
+	@RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/loadingbar")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/angular")
-    @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
+	@Scripts.Render("~/bundles/jquery")
+	@Scripts.Render("~/bundles/bootstrap")
+	@Scripts.Render("~/bundles/angular")
+	@Scripts.Render("~/bundles/loadingbar")
+	@Scripts.Render("~/bundles/app")
+	@RenderSection("scripts", required: false)
 </body>
 </html>
