--- a/F1Tippspiel.Web/Views/Shared/_GameBootstrapLayout.cshtml
+++ b/F1Tippspiel.Web/Views/Shared/_GameBootstrapLayout.cshtml
@@ -15,6 +15,7 @@
 
 	@RenderBody()
 
+	@Scripts.Render("~/bundles/scriptaddons")
 	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/bootstrap")
 	@Scripts.Render("~/bundles/angular")
