Added display for player standings - fixed authentication loop when bearer token expired - login now returns more information with token like user displayname

--- a/F1Tippspiel.Web/Content/site.less
+++ b/F1Tippspiel.Web/Content/site.less
@@ -1,6 +1,10 @@
 ﻿@softbg: #f8f8f8;
 @hardbg: #c7c7c7;
 
+.bold-text{
+	font-weight: bold;
+}
+
 .highlighted{
 	background-color: @softbg;
 	border-radius: 10px;
