--- a/F1Tippspiel.Web/Views/Game/_start.cshtml
+++ b/F1Tippspiel.Web/Views/Game/_start.cshtml
@@ -1,7 +1,38 @@
 ﻿<div class="row">
 	<div class="col-md-4">
-		<h1>F1 Tippspiel 2016</h1>
-		<p>Interner Bereich! Eingeloggt: {{authentication.isAuthenticated}}</p>
-		<p>hallo {{authentication.userName}}</p>
+		<h1>Platzierungen</h1>
+		<table class="table table-condensed">
+			<thead><tr><th></th><th>Pos.</th><th>Pun.</th><th>Name</th><th style="text-align:right;"><button type="button" class="btn btn-xs" title="Punktetabelle aktuslisieren" ng-click="refreshPlayerStandings()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button></th></tr></thead>
+			<tbody>
+				<tr ng-hide="isLoadingPlayerStandings==false">
+					<td colspan="5">
+						<uib-progressbar class="progress-striped active" value="dynamic" type="info"></uib-progressbar>
+					</td>
+				</tr>
+				<tr ng-repeat="player in playerStandings">
+					<td>{{player.changed}}</td><td>...</td><td>{{player.points}}</td><td ng-class="{'bold-text':player.isOnline===true}">{{player.name}}</td><td>{{player.placedBet}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="col-md-8">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Übersicht</h1>
+				<p>Interner Bereich! Eingeloggt: {{authentication.isAuthenticated}}</p>
+				<p>hallo {{authentication.userName}}</p>
+			</div>
+			<div class="col-md-12">
+				<h1>Letztes Rennen</h1>
+				<p>Interner Bereich! Eingeloggt: {{authentication.isAuthenticated}}</p>
+				<p>hallo {{authentication.userName}}</p>
+			</div>
+			<div class="col-md-12">
+				<h1>Nächstes Rennen</h1>
+				<p>Interner Bereich! Eingeloggt: {{authentication.isAuthenticated}}</p>
+				<p>hallo {{authentication.userName}}</p>
+			</div>
+		</div>
+		
 	</div>
 </div>
