--- a/F1Tippspiel.Web/Views/Home/Index.cshtml
+++ b/F1Tippspiel.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li ng-hide="!authentication.isAuthenticated" class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{authentication.userName}} <span class="caret"></span></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{authentication.displayName}} <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="#/settings">Einstellungen</a></li>
 						<li role="separator" class="divider"></li>
