Started implementing administration area - Added admin driver view - Added admin team view - Added admin track view - Combined the MVC Controller to a single TemplatesController for delivering templates to AngularJS - Changed claims for users with admin rights

--- a/F1Tippspiel.Web/Views/Templates/Index.cshtml
+++ b/F1Tippspiel.Web/Views/Templates/Index.cshtml
@@ -26,7 +26,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="#/settings">Einstellungen</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#/admin">Administration</a></li>
+						<li ng-class="{active:currentRoute==='admin'}"><a href="#/admin">Administration</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="" ng-click="logout()">Ausloggen</a></li>
 					</ul>
