--- a/F1Tippspiel.Web/Views/Templates/_admin.cshtml
+++ b/F1Tippspiel.Web/Views/Templates/_admin.cshtml
@@ -13,7 +13,7 @@
 				<li ng-class="{active:currentRoute==='admin/tracks'}"><a href="" ng-click="showArea('tracks')">Strecken</a></li>
 				<li ng-class="{active:currentRoute==='admin/drivers'}"><a href="" ng-click="showArea('drivers')">Fahrer</a></li>
 				<li ng-class="{active:currentRoute==='admin/teams'}"><a href="" ng-click="showArea('teams')">Rennställe</a></li>
-				<li ng-class="{active:currentRoute==='admin/dates'}"><a href="">Termine</a></li>
+				<li ng-class="{active:currentRoute==='admin/dates'}"><a href="" ng-click="showArea('dates')">Termine</a></li>
 			</ul>
 		</div>
 	</div>
@@ -106,7 +106,38 @@
 						</tbody>
 					</table>
 				</div>
-				<div ng-hide="openArea!=='dates'"></div>
+				<div ng-hide="openArea!=='dates'">
+					<table class="table table-condensed">
+						<thead>
+							<tr>
+								<th>Id</th>
+								<th>Name</th>
+								<th>Stadt</th>
+								<th>Qualifying</th>
+								<th>Rennen</th>
+								<th style="text-align:right;">
+									<button type="button" class="btn btn-xs" title="Neue Strecke hinzufügen" ng-click="addNewTrack()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+									<button type="button" class="btn btn-xs" title="Streckenliste aktualisieren" ng-click="refreshConfiguredTracks()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-hide="isLoadingConfiguredDrivers==false">
+								<td colspan="5">
+									<uib-progressbar class="progress-striped active" value="dynamic" type="info"></uib-progressbar>
+								</td>
+							</tr>
+							<tr ng-repeat="track in configuredTracks">
+								<td>{{track.trackId}}</td>
+								<td>{{track.name}}</td>
+								<td>{{track.city}}</td>
+								<td>{{track.race.qualifying}}</td>
+								<td>{{track.race.raceTime}}</td>
+								<td></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 
